--- a/Classes/en.lproj/ChatRoomViewController.xib
+++ b/Classes/en.lproj/ChatRoomViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1072" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatRoomViewController">
             <connections>
                 <outlet property="addressLabel" destination="40" id="43"/>
                 <outlet property="avatarImage" destination="41" id="44"/>
+                <outlet property="buttonEdit" destination="100" id="s9q-PU-agh"/>
                 <outlet property="cancelTransferButton" destination="75" id="85"/>
                 <outlet property="chatView" destination="49" id="54"/>
                 <outlet property="headerView" destination="39" id="45"/>
@@ -208,6 +209,7 @@
                                 <color key="titleColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <state key="selected" title="Done"/>
                             <state key="highlighted">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -247,6 +249,6 @@
         <image name="chat_send_default.png" width="117" height="115"/>
         <image name="chat_send_disabled.png" width="117" height="115"/>
         <image name="chat_send_over.png" width="117" height="115"/>
-        <image name="toolsbar_background.png" width="5" height="88"/>
+        <image name="toolsbar_background.png" width="320" height="88"/>
     </resources>
 </document>
